[package]
name = "metrique"
version = "0.1.16"
edition = "2024"
license = "Apache-2.0"
description = "Library for generating unit of work metrics"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"
rust-version = "1.89" # See build.yml for why this MSRV

[features]
default = ["service-metrics"]
# re-exports metrique-writer-format-emf as metrique::emf
emf = ["dep:metrique-writer-format-emf"]
# utilities for tests
test-util = ["metrique-writer/test-util", "metrique-writer-core/test-util", "metrique-metricsrs/test-util"]
# Private utilities for testing the formatter crates. 100% unstable, do not use outside of this workspace
# dep:tracing-appender and dep:tracing-subscriber is for rustdoc
private-test-util = ["dep:tracing-appender", "dep:tracing-subscriber"]
service-metrics = ["dep:metrique-service-metrics"]
# re-export metrique-writer features
metrics-rs-bridge = ["dep:metrique-metricsrs"]
metrics-rs-024 = ["metrique-writer/metrics-rs-024", "metrique-metricsrs/metrics-rs-024"]
metrics_rs_024 = ["metrics-rs-024"]

[dependencies]
tokio = { workspace = true, features = ["sync"] }
metrique-writer-core = { path = "../metrique-writer-core", version = "0.1.11" }
metrique-macro = { path = "../metrique-macro", version = "0.1.13" }
metrique-core = { path = "../metrique-core", version = "0.1.14" }
metrique-writer = { path = "../metrique-writer", version = "0.1.16" }
metrique-metricsrs = { path = "../metrique-metricsrs", version = "0.1.16", optional = true }
metrique-service-metrics = { path = "../metrique-service-metrics", version = "0.1.15", optional = true }
metrique-timesource = { path = "../metrique-timesource", version = "0.1.7" }
metrique-writer-format-emf = { path = "../metrique-writer-format-emf", version = "0.1.15", optional = true }
metrique-writer-macro = { path = "../metrique-writer-macro", version = "0.1.7" }
tracing-appender = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
ryu = { workspace = true }
itoa = { workspace = true }

[dev-dependencies]
assert2 = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
metrique-writer = { path = "../metrique-writer", features = ["test-util"] }
metrique-timesource = { path = "../metrique-timesource", features = [
    "custom-timesource",
    "tokio",
    "test-util",
] }
metrique-writer-core = { path = "../metrique-writer-core", features = [
    "private-test-util",
    "test-util",
] }
metrique-writer-format-emf = { path = "../metrique-writer-format-emf", features = [] }
tracing = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
trybuild = { workspace = true }
rustversion = { workspace = true }
metrique = { path = ".", features = ["emf", "test-util"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
rstest = { workspace = true }

# We need to name one example so that our examples that use dev-dependencies get scraped
[[example]]
name = "unit-of-work-simple"
doc-scrape-examples = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
